# crewairag

./: README.md  pyproject.toml
pdf/: crew_custom_model_and_embeddings.py
