[tool.poetry]
name = "crewairag"
version = "0.1.0"
description = "A crewai + RAG project"
authors = ["ss"]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
python-dotenv = "^1.0.0"
crewai-tools = "^0.4.26"
firecrawl-py = "^0.0.20"
embedchain = {extras = ["youtube"], version = "^0.1.116"}
langchain-anthropic = "^0.1.20"
ollama = "^0.2.1"
crewai = "^0.159.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
